- Changed config file format - Changed how the setup script creates directories from the config file - Starting to change the start script to handle future docker-compose run information - Removing incorrect lines from the agent and server dockerfiles. Corrected the files and added the removed lines from the start script.